--- a/panel/src/main.scss
+++ b/panel/src/main.scss
@@ -1,14 +1,45 @@
 html,
 body {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+  background-color: #121316;
+  color: hsla(0, 0%, 100%, 0.6);
+
+  font-family: "SplineSans", system-ui, -apple-system, BlinkMacSystemFont,
+    "Helvetica Neue", Helvetica, Arial, sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
   padding: 0;
-  background: #333333;
-  color: #fefefe;
+
+  font-size: 12px;
+  letter-spacing: 0.3px;
   height: 100%;
   overflow: hidden;
+}
+
+* {
+  &::-webkit-scrollbar {
+    width: 10px;
+    background: rgba(0, 0, 0, 0.2);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 50px;
+  }
+}
+
+@keyframes animation_rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animation_rotation {
+  animation: animation_rotation 2s linear infinite;
 }
 
 #app {
